<resources>
    <string name="app_name">久通云2.0</string>
    <string name="login">登录</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="wait">请稍后...</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="login_failed">登录失败</string>
    <string name="login_account_not_exits">账户名或者密码错误</string>
    <string name="account_expired">账户已过期</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="remember_account_and_password">记住用户名和密码</string>
    <string name="configure_server_node">配置服务器节点</string>
    <string name="version_number">版本%s</string>
    <string name="table_one">首页</string>
    <string name="table_two">车箱</string>
    <string name="table_three">扫一扫</string>
    <string name="table_four">实时监控</string>
    <string name="table_five">轨迹回放</string>
    <string name="carriage">车箱</string>
    <string name="carriage_id">车箱号</string>
    <string name="device_id">设备ID</string>
    <string name="bind_now">立即绑定</string>
    <string name="unbind">解除绑定</string>
    <string name="history_record">历史记录</string>
    <string name="please_enter_key_words">请输入关键字</string>
    <string name="car_box_information">车箱信息</string>
    <string name="real_time_monitoring">实时监控</string>
    <string name="track_playback">轨迹回放</string>
    <string name="alarm_report">常规报警</string>
    <string name="alarm_info">报警消息</string>
    <string name="temperature_curve">温度曲线</string>
    <string name="oil_level_analysis">油耗分析</string>
    <string name="oil_level_curve">油耗曲线</string>
    <string name="event_notification">事件通知</string>
    <string name="event_info">事件详情</string>
    <string name="parking_report">停车报表</string>
    <string name="parking_info">停车详情</string>
    <string name="fuel_consumption_analysis">油耗分析</string>
    <string name="driving_statistics">行驶统计</string>
    <string name="switch_lock_report">开关锁报表</string>
    <string name="switch_lock_device">从机开关锁</string>
    <string name="delivery_list">派车清单</string>
    <string name="train_dispatch">车次派发</string>
    <string name="active_safety_report">主动安全</string>
    <string name="active_safety">主动安全</string>
    <string name="active_safety_info">主动安全详情</string>
    <string name="open_close_report">开关锁报表</string>
    <string name="open_lock_info">开关锁详情</string>
    <string name="slave_switch_lock">从机开关锁</string>
    <string name="lock_password_maintenance">锁密码维护</string>
    <string name="video_configuration">视频配置</string>
    <string name="child_lock_configuration">子锁配置</string>
    <string name="distribution_bill">派车清单</string>
    <string name="travel_info" >行驶详情</string>
    <string name="temperature_and_humidity_curve">温湿度曲线</string>
    <string name="temperature_and_humidity_configuration">温湿度配置</string>
    <string name="ota_upgrade">OTA升级</string>
    <string name="ota_document_maintenance">OTA文件维护</string>
    <string name="device_registration">设备注册</string>
    <string name="lock_and_take_photos">上锁拍照</string>
    <string name="bluetooth_operation_and_maintenance">蓝牙运维</string>
    <string name="all">全部</string>
    <string name="online">在线</string>
    <string name="driving">运行</string>
    <string name="parking">停车</string>
    <string name="idling">怠速</string>
    <string name="offline">离线</string>
    <string name="offline_inactive">离线/未激活</string>
    <string name="expired">已过期</string>
    <string name="will_expire_soon">即将过期</string>
    <string name="bind">绑定</string>
    <string name="check_track">查看轨迹</string>
    <string name="check_detail">查看详情</string>
    <string name="alarm_detail">报警详情</string>
    <string name="video_surveillance">视频监控</string>
    <string name="car_details">车箱详情</string>
    <string name="fuel_consumption_curve">油耗曲线</string>
    <string name="unlock">开锁</string>
    <string name="lock">关锁</string>
    <string name="unlock_authorization">开锁授权</string>
    <string name="cut_off_oil_and_electricity">断油电</string>
    <string name="open_and_close_the_door">开关门</string>
    <string name="tire_temperature_and_pressure_curve">胎温胎压曲线</string>
    <string name="general_alarm_report">常规报警</string>
    <string name="event_report_detail">事件详情</string>
    <string name="alarm_common">常规报警</string>
    <string name="alarm_activity_secrity">主动安全</string>
    <string name="alarm_secrity_list">主动安全报表</string>
    <string name="deal_suggestion">处理意见</string>
    <string name="alarm_type">报警类型</string>
    <string name="event_type">事件类型</string>
    <string name="safety_type">主动安全类型</string>
    <string name="start_time">开始时间</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="end_time">结束时间</string>
    <string name="duration_time">持续时间</string>
    <string name="duration">持续时长</string>
    <string name="sort_by_number_of_alarms">按报警次数排序</string>
    <string name="sort_by_number_of_events">按事件次数排序</string>
    <string name="sort_by_number_of_openlock">按开锁次数排序</string>
    <string name="unit_time">单位(次)</string>
    <string name="check_photo">查看照片</string>
    <string name="check_voice">查看音频</string>
    <string name="check_video">查看视频</string>
    <string name="document_dowload">文件下载</string>
    <string name="pw_lock_info">公司名称：\n静态密码：\n动态密码：</string>
    <string name="change_password">修改密码</string>
    <string name="please_enter_a_new_password">请输入新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_failed">确认密码错误</string>
    <string name="please_enter_confirm_password">请输入确认密码</string>
    <string name="new_password_does_not_match_the_confirmed_password">新密码与确认密码不一致</string>
    <string name="turn_on_dynamic_password">开启动态密码中，请稍候</string>
    <string name="turn_off_dynamic_password">关闭动态密码中，请稍候</string>
    <string name="click_to_add_child_lock">+ 点击增加子锁</string>
    <string name="click_to_reduce_child_lock">- 点击减少子锁</string>
    <string name="configuration">配置</string>
    <string name="please_enter">请输入</string>
    <string name="child_lock_id">子锁%d ID</string>
    <string name="female_lock_id">母锁ID：</string>
    <string name="female_lock_info">子锁1 ID：\n子锁状态：\n时间：</string>
    <string name="sub_lock_unlock">子锁开锁</string>
    <string name="untie">解绑</string>
    <string name="child_lock_list">子锁列表</string>
    <string name="search">搜索</string>
    <string name="device_scan_code">设备扫码</string>
    <string name="send_instructions">发送指令</string>
    <string name="instruction_type">指令类型：</string>
    <string name="instruction_content">指令内容：</string>
    <string name="return_content">返回内容：</string>
    <string name="execution_status">执行状态：</string>
    <string name="current_version">当前版本</string>
    <string name="equipment_type">设备类型：</string>
    <string name="version_name">版本名称：</string>
    <string name="is_the_latest_version">已是最新版本，无需升级</string>
    <string name="found_the_latest_version">发现最新版本，点击下方进行升级</string>
    <string name="upgrade">升级</string>
    <string name="ota_version_information">OTA版本信息</string>
    <string name="temperature_sensor_configuration">温度传感器配置</string>
    <string name="synchronize">同步</string>
    <string name="save_configuration">保存配置</string>
    <string name="id">ID：</string>
    <string name="time">时间:</string>
    <string name="temperature">温度:</string>
    <string name="humidity">湿度:</string>
    <string name="power">电量:</string>
    <string name="mileage">里程：</string>
    <string name="progress_mileage">持续里程：</string>
    <string name="remote_unlock">远程开锁</string>
    <string name="swipe_to_unlock">刷卡开锁</string>
    <string name="bluetooth_unlock">蓝牙开锁</string>
    <string name="cut_unlock">剪绳开锁</string>
    <string name="unrecognized_unlock">未识别开锁</string>
    <string name="dispatch_car_info">运输车辆\n送货单号\n班线名称\n司机\n承运商\n预计发车时间\n预计到达时间</string>
    <string name="modify_train_number">修改车次</string>
    <string name="voided_trains">作废车次</string>
    <string name="completed_trains">完成车次</string>
    <string name="please_input_username">请输入账号</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_choose_the_unlocking_method">请选择开锁方式</string>
    <string name="please_choose_the_deal_method">请选择处理方式</string>
    <string name="password">密码</string>
    <string name="selected_carriages">选中了[%d]个车箱</string>
    <string name="selected_devices">选中了[%d]个设备</string>
    <string name="scan_code_to_add_sub_lock">扫码添加子锁</string>
    <string name="check_the_child_lock_list">查看子锁列表</string>
    <string name="sub_loc_configuration_pleas_wait">子锁配置中,请稍后</string>
    <string name="sub_loc_synchronize_pleas_wait">子锁同步中,请稍后</string>
    <string name="the_configuration_is_successful">配置成功</string>
    <string name="configuration_failed">配置失败</string>
    <string name="synchronize_failed">同步失败</string>
    <string name="synchronize_success">同步成功</string>
    <string name="devices_name1">%1$s[%2$s]</string>
    <string name="devices_name2">%1$s[%2$s][%3$s]</string>
    <string name="please_select_equipment">请选择设备</string>
    <string name="prompt">提示</string>
    <string name="confirm_logout">确认退出登录?</string>
    <string name="ignore_all">是否忽略全部</string>
    <string name="clear_search_history">清空历史搜索</string>
    <string name="suggsetion_haveread">我已阅读</string>
    <string name="suggestion_havedeal">已通知相关人员处理</string>
    <string name="suggestion_haveconfirm">已经联系司机确认</string>
    <string name="company">公司</string>
    <string name="histroy_record">历史纪录</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_failed">提交失败</string>
    <string name="select_all">全选</string>
    <string name="re_select">重新选择</string>
    <string name="complete">完成</string>
    <string name="bind_device">绑定设备</string>
    <string name="querying">查询中</string>
    <string name="select_query_car">请选择要查询的车辆</string>
    <string name="time_limit">结束时间不能小于开始时间</string>
    <string name="no_track">暂无轨迹信息</string>
    <string name="device_no_belond">设备不属于此用户</string>
    <string name="device_not_find">未找到设备</string>
    <string name="connect_failed">连接失败</string>
    <string name="operation_not_supported">不支持此操作</string>
    <string name="driver_name">司机姓名</string>
    <string name="contact">联系方式</string>
    <string name="location_time">定位时间</string>
    <string name="data_receive_time">数据接收时间</string>
    <string name="unhandled_alarm_num">未处理报警总数</string>
    <string name="position">位置</string>
    <string name="lock_status">锁状态</string>
    <string name="last_operation_time">最后操作时间</string>
    <string name="operation_position">操作位置</string>
    <string name="GPS_signal_value">GPS信号值</string>
    <string name="GSM_signal_value">GSM信号值</string>
    <string name="charging">充电中</string>
    <string name="electricity">电量</string>
    <string name="temperature_and_humidity">温湿度</string>
    <string name="speed">速度</string>
    <string name="mileage_">里程</string>
    <string name="oil_level">油位</string>
    <string name="direction">方向</string>
    <string name="north">正北</string>
    <string name="east">正东</string>
    <string name="south">正南</string>
    <string name="weast">正西</string>
    <string name="open_door">开门</string>
    <string name="close_door">关门</string>
    <string name="ACC_on">ACC开</string>
    <string name="ACC_off">ACC关</string>
    <string name="oil_and_power_on">通油电</string>
    <string name="oil_and_power_off">断油电</string>
    <string name="engine_open">发动机开</string>
    <string name="engine_close">发动机关</string>
    <string name="telephone">手机号</string>
    <string name="authored_person">被授权人</string>
    <string name="period">有效期</string>
    <string name="authorize">授权</string>
    <string name="hour">（小时）</string>
    <string name="tel_num_cannot_empty">手机号不能为空</string>
    <string name="authorized_person_cannot_empty">被授权人不能为空</string>
</resources>