<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/include_title_layout" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_38dp"
        android:text="@string/current_version"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/normal_34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_10dp"
        android:paddingLeft="@dimen/normal_40dp"
        android:paddingRight="@dimen/normal_40dp">

        <TextView
            android:layout_width="@dimen/normal_130dp"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/normal_26sp"
            android:text="@string/equipment_type" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/normal_26sp"
            tools:text="JT701" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_20dp"
        android:paddingLeft="@dimen/normal_40dp"
        android:paddingRight="@dimen/normal_40dp">

        <TextView
            android:layout_width="@dimen/normal_130dp"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/normal_26sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/normal_26sp"
            tools:text="JT701_20200912.bin" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_38dp"
        android:layout_marginTop="@dimen/normal_90dp"
        android:textColor="@color/color_3B74F0"
        android:textSize="@dimen/normal_34sp"
        tools:text="@string/is_the_latest_version" />

    <TextView
        android:id="@+id/tv_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_77dp"
        android:layout_marginLeft="@dimen/normal_75dp"
        android:layout_marginTop="@dimen/normal_260dp"
        android:layout_marginRight="@dimen/normal_75dp"
        android:background="@drawable/button_oval_bg"
        android:gravity="center"
        android:text="@string/upgrade"
        android:textColor="@color/color_white"
        android:textSize="@dimen/normal_34sp"
        android:visibility="invisible" />

</LinearLayout>