<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/normal_580dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_100dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/prompt"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/normal_28sp" android:layout_marginTop="@dimen/normal_10dp"/>

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_60dp"
            android:layout_marginLeft="@dimen/normal_30dp"
            android:layout_marginRight="@dimen/normal_30dp"
            android:gravity="center"
            android:paddingLeft="@dimen/normal_24dp"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/normal_28sp"
            android:text="@string/ignore_all"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/normal_30dp"
            android:background="@color/color_F5F5F5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_90dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_left"
                android:layout_width="@dimen/normal_0dp"
                android:layout_height="@dimen/normal_90dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/color_F5F5F5" />

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="@dimen/normal_0dp"
                android:layout_height="@dimen/normal_90dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>